--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 </head>
 <body>
     <div class="dashboard">
-        <header class="dashboard__header">Cabeçalho</header>
-        <main class="dashboard__content">Conteúdo</main>
+        <aside class="dashboard__sidebar">Menu</aside>
+        <header class="dashboard__header">Dashboard Inatel</header>
+        <main class="dashboard__content">
+            <div class="dashboard__card">Card 1</div>
+            <div class="dashboard__card">Card 2</div>
+            <div class="dashboard__card">Card 3</div>
+        </main>
         <footer class="dashboard__footer">Rodapé</footer>
     </div>
 </body>
 </html>
-
