--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <button id="toggle-mode">Alternar Modo</button>
-    <div class="container">
+    <div class="grid-container">
         <header class="header">
             <h2>Olá, Raphael</h2>
             <p>Você possui um armário reservado com entrega para hoje...</p>
@@ -33,11 +33,5 @@
             <div class="card">Card de Notícias - Subtítulo</div>
         </section>
     </div>
-    <script>
-        const toggleButton = document.getElementById('toggle-mode');
-        toggleButton.addEventListener('click', () => {
-            document.body.classList.toggle('dark-mode');
-        });
-    </script>
 </body>
 </html>
