--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <button id="toggle-mode">🌙 Alternar Modo</button>
-    
-    <div class="container">
-        <div class="grid-container">
+
+    <div class="main-container">
+        <div class="container">
             <header class="header">
                 <h2 id="welcome-message">Bem-vindo!</h2>
                 <p>📦 Seu armário será entregue hoje.</p>
